Major bug fixes
Messages don't cover the message input and correct username shows when using commands.

--- a/public/style.css
+++ b/public/style.css
@@ -76,7 +76,7 @@ h1 {
   top: 6.5vh;
   z-index: 499;
 }#messages > li {
-  padding: 1rem 1rem;
+  padding: 1.5rem 1.5rem;
   z-index: 0;
 }#messages > li:hover {
   background-color: rgb(245, 245, 245);
@@ -147,19 +147,15 @@ h1 {
   background-color: black;
 }.dark #messages > li:hover {
   transition: .1s;
-  background-color: rgb(26, 26, 26);
+  background-color: rgb(17, 17, 17);
 }.dark ::placeholder {
-  color: white; 
+  color: white;
 }.dark .header {
   transition: .1s;
   background-color: black;
 }
 
 @media screen and (max-width: 767px) {
-  * {
-    overflow: hidden;
-  }
-
   #messages {
     top: 10vh;
   }
